[gd_scene load_steps=35 format=3 uid="uid://bc62polg84ufx"]

[ext_resource type="Texture2D" uid="uid://cdn2jkvb3atr2" path="res://assets/back_walk1.png" id="1_0gg3g"]
[ext_resource type="Script" path="res://scenes/enemy.gd" id="1_udqx1"]
[ext_resource type="Texture2D" uid="uid://b1hmuncou6lr1" path="res://assets/back_walk3.png" id="2_xgnmj"]
[ext_resource type="Texture2D" uid="uid://2wnunohp7ddj" path="res://assets/back_walk2.png" id="3_dgbxf"]
[ext_resource type="Texture2D" uid="uid://c7bjb2ryfpitk" path="res://assets/front_walkG.png" id="4_8kxba"]
[ext_resource type="Texture2D" uid="uid://bocmqiunp2vta" path="res://assets/side_walk1.png" id="5_8djd0"]
[ext_resource type="Texture2D" uid="uid://decd1qgnmj28u" path="res://assets/d1.png" id="5_eq3xg"]
[ext_resource type="Texture2D" uid="uid://73knxiy1lpih" path="res://assets/d2.png" id="6_07r7c"]
[ext_resource type="Texture2D" uid="uid://bs08epjml8w8n" path="res://assets/side_walk2.png" id="6_10rw3"]
[ext_resource type="Texture2D" uid="uid://bq04tyj44alaq" path="res://assets/side_walk3.png" id="7_2r8em"]
[ext_resource type="Texture2D" uid="uid://j5njo7v8abvu" path="res://assets/d3.png" id="7_3drvn"]
[ext_resource type="Texture2D" uid="uid://cfihkxevhyuhi" path="res://assets/ver_walk2.png" id="8_c7rjg"]
[ext_resource type="Texture2D" uid="uid://cuvx6q5rxv1ny" path="res://assets/ver_walk3.png" id="9_t2u44"]
[ext_resource type="Texture2D" uid="uid://dcuftpd0k61tk" path="res://assets/ver_walk1.png" id="10_jpebo"]
[ext_resource type="Texture2D" uid="uid://bs4dignxyasta" path="res://assets/ver_walk4.png" id="11_kheah"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b48fr"]
atlas = ExtResource("1_0gg3g")
region = Rect2(0, 0, 302, 358)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nppj"]
atlas = ExtResource("2_xgnmj")
region = Rect2(0, 0, 322, 338)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iexg"]
atlas = ExtResource("3_dgbxf")
region = Rect2(0, 0, 302, 358)

[sub_resource type="AtlasTexture" id="AtlasTexture_iry87"]
atlas = ExtResource("5_eq3xg")
region = Rect2(0, 0, 283, 340)

[sub_resource type="AtlasTexture" id="AtlasTexture_yetnr"]
atlas = ExtResource("6_07r7c")
region = Rect2(0, 0, 296, 322)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uxi4"]
atlas = ExtResource("7_3drvn")
region = Rect2(0, 0, 347, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2gsg"]
atlas = ExtResource("4_8kxba")
region = Rect2(0, 0, 341, 494)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pjns"]
atlas = ExtResource("4_8kxba")
region = Rect2(341, 0, 341, 494)

[sub_resource type="AtlasTexture" id="AtlasTexture_epwtb"]
atlas = ExtResource("5_8djd0")
region = Rect2(0, 0, 431, 380)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k5bv"]
atlas = ExtResource("6_10rw3")
region = Rect2(0, 0, 442, 389)

[sub_resource type="AtlasTexture" id="AtlasTexture_tynd6"]
atlas = ExtResource("7_2r8em")
region = Rect2(0, 0, 436, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nkus"]
atlas = ExtResource("8_c7rjg")
region = Rect2(0, 0, 313, 406)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qgqv"]
atlas = ExtResource("9_t2u44")
region = Rect2(0, 0, 288, 394)

[sub_resource type="AtlasTexture" id="AtlasTexture_stng2"]
atlas = ExtResource("10_jpebo")
region = Rect2(0, 0, 324, 355)

[sub_resource type="AtlasTexture" id="AtlasTexture_3r3vh"]
atlas = ExtResource("11_kheah")
region = Rect2(0, 0, 324, 392)

[sub_resource type="SpriteFrames" id="SpriteFrames_t5lct"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b48fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nppj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iexg")
}],
"loop": true,
"name": &"back_walk",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iry87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yetnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uxi4")
}],
"loop": true,
"name": &"diaR_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2gsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pjns")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_epwtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k5bv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tynd6")
}],
"loop": true,
"name": &"side_walk",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nkus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qgqv")
}],
"loop": true,
"name": &"verL_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_stng2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3r3vh")
}],
"loop": true,
"name": &"verR_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lpo0a"]
radius = 165.215

[sub_resource type="CircleShape2D" id="CircleShape2D_6cjpb"]
radius = 132.061

[sub_resource type="CircleShape2D" id="CircleShape2D_aiylu"]
radius = 180.178

[node name="enemy" type="CharacterBody2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_udqx1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t5lct")
animation = &"verL_walk"
frame_progress = 0.02129

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="player_chase" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-12, 96)
scale = Vector2(25, 25)
shape = SubResource("CircleShape2D_lpo0a")
one_way_collision_margin = 46.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6cjpb")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_aiylu")

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
